# eventbuzz

./: Cargo.toml  README.md  _typos.toml  tester.cmd
.github/workflows/: rust.yml
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: asynchronous.rs  event.rs  lib.rs  sync.rs
crates/core/src/asynchronous/: eventbus.rs  listener.rs  publisher.rs
crates/core/src/sync/: eventbus.rs  listener.rs  publisher.rs
crates/eventbuzz/: Cargo.toml  README.md
crates/eventbuzz/src/: async_tests.rs  asynchronous.rs  lib.rs  sync.rs  tests.rs
